# mesh_rgbd_rendering

./: .gitignore  .travis.rosinstall  .travis.yml  CMakeLists.txt  README.md  ReadMe.md  config.json  config.yaml  object_rendering.cpp  object_visualizer.cpp  package.xml
.travis/: dependencies.sh
common/include/ros_mesh_rgbd_rendering/: mesh_rgbd_rendering.h  shader.h
common/src/: gbuffer.cpp
data/: config.yaml  pose.txt  test.txt
dinkelmehl/: texture_model.mtl
launch/: mesh_rgbd_rendering.launch  ros_object_rendering_params.yaml
object1/: config.json
object1/pc_object1/: BB.txt  object1_intrinsic.txt  object1_pt_odo.txt
ros/: camera_pose_visualizer.cpp  mesh_depth_recover_service_node.cpp  object_visualizer.cpp  ros_mesh_rgbd_rendering_node.cpp  ros_mesh_rgbd_rendering_service_node.cpp  view_generator.cpp
scirpts/: renderer.py
sources/: shader.h
src/: mesh_rgbd_rendering.cpp  view_generator.cpp
srv/: MeshRGBDRendering.srv  ViewGenerator.srv
volkorn/: config.json
