<?xml version="1.0"?>
<package format="2">
        <name>ros_mesh_rgbd_rendering</name>
        <version>0.0.1</version>
        <description>The ros_mesh_rgbd_rendering package</description>
        <maintainer email="manh.ha.hoang@ipa.fraunhofer.de">Manh-Ha Hoang</maintainer>
        <author email="manh.ha.hoang@ipa.fraunhofer.de">Manh-Ha Hoang</author>
        <license>BSD-3</license>
        <buildtool_depend>catkin</buildtool_depend>
        <depend>cmake_modules</depend>
        <depend>message_generation</depend>
        <depend>message_runtime</depend>
        <depend>pcl_ros</depend>
        <depend>roscpp</depend>
        <depend>roslib</depend>
        <depend>std_msgs</depend>
        <export>

        </export>
</package>
